@@ -6,7 +6,7 @@ import java.util.stream.Collectors;
 public class Main {
 
     public static void main(String[] args) {
-        int arr[] = twoSum(new int[]{3,2,4}, 6);
+        int[] arr = twoSum(new int[]{3,2,4}, 6);
         for (Integer item:
              arr) {
             System.out.println(item);
@@ -15,7 +15,7 @@ public class Main {
     }
 
     public static int[] twoSum(int[] nums, int target) {
-        List<Integer> numList = Arrays.stream(nums).boxed().collect(Collectors.toList());
+        List<Integer> numList = Arrays.stream(nums).boxed().toList();
         List<Integer> indexList = new ArrayList<>();
         outsideFor:
         for (int i = 0; i <numList.size() ; i++) {
